migrate schema driven tests from build-src to tenant/codegen (AIRBNB)
test: Added SchemaDrivenTests and its related dependencies, configured it to run based on a specified SDL.

Github-Change-Id: 967390
GitOrigin-RevId: 6acd660db458dc3be1afa868ef503e384a2c7cf0